# ssi

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakeSettings.json
docs/: useful_urls.txt
includes/devices/: bus.hpp  crc.hpp  master.hpp  slave.hpp
includes/interfaces/: data_package.hpp  interface.hpp
src/: CMakeLists.txt  main.cpp
test/crc_test/: crc_test.hpp
test/device_test/: master_test.hpp  slave_test.hpp
test/device_tests/: master_bus.hpp  slave_bus.hpp
test/devices/: master_bus.cpp  slave_bus.cpp
